styles/style.css
/* Some common styles */
* {
    margin: 0px;
    padding: 0px;
}

body {
    font-family: 'Lato', sans-serif;
}


/* header banner styles */

.banner-container {
    display: flex;
    justify-content: space-evenly;
    /* align-items: center; */
    background: rgba(229, 84, 115, 0.10);
}

.banner-text {
    padding: 100px;
}

.banner-title {
    color: #272727;
    font-size: 80px;
    font-weight: 800;
    margin-bottom: 32px;
}

.banner-description {
    color: rgba(39, 39, 39, 0.60);
    font-size: 18px;
    margin-bottom: 32px;
    width: 634px;
}


/* common button style for the whole website */

.btn-primary {
    border-radius: 8px;
    background: #E55473;
    color: #FFF;
    font-size: 20px;
    padding: 20px 43px;
    border: none;
    cursor: pointer;
}

.btn-primary:hover {
    background: rgba(229, 82, 114, 0.6);
    transition: 0.5s;
}


.banner-img {
    padding-right: 100px;
    padding-top: 30px;
    padding-bottom: 0px;
}

.banner-img img {
    width: 500px;
    height: 650px;
    margin-bottom: -3px;
}


/* featured flowers section styles */

.featured-flowers-section {
    /* margin: 100px 150px; */
    width: 80%;
    margin: 100px auto;
    text-align: center;
    /* border: 1px solid black; */
}

/* .featured-flowers-container{
    margin-left: auto;
    margin-right: auto;
} */

.featured-flowers-text {
    max-width: 600px;
    margin: auto;
}

.featured-flowers-title {
    color: #272727;
    font-size: 40px;
    font-weight: 800;
    margin-bottom: 24px;
}

.featured-flowers-description {
    color: rgba(39, 39, 39, 0.60);
    font-size: 18px;
    font-weight: 400;
    margin-bottom: 50px;
}

.featured-flowers-img-container {
    display: flex;
    /* gap: 10px; */
    justify-content: space-between;
    align-items: center;
    margin: auto;
    /* padding-left: 125px; */
}

.featured-flowers-img-container img {
    width: 250px;
}

.featured-flower-img-1 {
    width: 390px;
    height: 470px;
    background: rgba(167, 33, 98, 0.15);
    border-radius: 195px 195px 0 0;
    display: flex;
    justify-content: center;
    align-items: end;
    margin-bottom: 24px;
}

.featured-flower-img-2 {
    width: 390px;
    height: 470px;
    background: rgba(5, 151, 160, 0.15);
    border-radius: 195px 195px 0 0;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-bottom: 24px;
}

.featured-flower-img-3 {
    width: 390px;
    height: 470px;
    background: rgba(71, 125, 17, 0.15);
    border-radius: 195px 195px 0 0;
    display: flex;
    justify-content: center;
    align-items: end;
    margin-bottom: 24px;
}

.featured-flower-box p {
    color: #272727;
    font-size: 24px;
    font-weight: 700;
    text-decoration-line: underline;
}


/* services section styles */

.services-section {
    margin: 100px 150px;
    text-align: center;
    border-radius: 8px;
    background: rgba(39, 39, 39, 0.05);
    padding: 60px 80px;
}

.services-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.service img {
    width: 70px;
    margin-bottom: 15px;
}

.service p {
    color: rgba(39, 39, 39, 0.80);
    font-size: 24px;
    font-weight: 600;
}


/* sale section styles */

.sale-section {
    border-radius: 8px;
    background: rgba(229, 84, 115, 0.05);
    margin-bottom: 100px;
}

.sale-container {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    text-align: center;
    padding: 100px;
}

.sale-text {
    max-width: 550px;
}

.sale-title {
    color: #272727;
    font-size: 40px;
    font-weight: 800;
    margin-bottom: 24px;
}

.sale-title span {
    color: #E55473;
}

.sale-description {
    color: rgba(39, 39, 39, 0.60);
    font-size: 18px;
    font-weight: 400;
    margin-bottom: 32px;
}


/* instagram section */

.instagram-section {
    margin: 100px 150px;
    text-align: center;
    /* border: 1px solid black; */
}

.instagram-text {
    max-width: 600px;
    margin: auto;
}

.instagram-images {
    display: flex;
    justify-content: space-between;
    align-items: center;
    /* gap: 24px; */
}

.instagram-images img {
    width: 250px;
}


/* order now section (BONUS) */

/* order now form styles */

.order-section {
    display: flex;
    justify-content: space-around;
    align-items: center;
    border-radius: 8px;
    background: rgba(229, 84, 115, 0.05);
    padding: 100px 20px;
    text-align: center;
}

/* .order-form{
    width: 300px;
    margin: auto;
} */

.order-form label {
    display: block;
    margin-bottom: 24px;
    text-align: left;
}

/* order table styles */

.price-list img {
    width: 80px;
}

table {
    border-collapse: collapse;
    /* padding: 10px; */
}

td,
th {
    padding: 10px 25px;
}

/* implemented themed background color */
td:nth-child(odd) {
    background-color: rgba(229, 84, 115, 0.10);
}


/* subscribe section styles */

.subscribe-section {
    margin: 100px 150px;
    text-align: center;
    display: flex;
    align-items: center;
    justify-content: center;
    background-image: url('../images/banner/Rectangle\ 9.png');
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

.subscribe-container {
    padding: 100px;
}

.subscribe-form form {
    display: flex;
    gap: 15px;
    align-items: center;
}

.subscribe-email {
    padding: 20px 25px;
    border-radius: 8px;
    background: #FFF;
    width: 500px;
    border: 0;
}

.subscribe-email::placeholder {
    color: rgba(39, 39, 39, 0.60);
    font-size: 16px;
    font-weight: 400;
}


/* footer styles */

footer {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 100px;
    background: #111010;
    text-align: center;
}

.footer-title {
    color: #FFFFFF;
    font-size: 48px;
    font-weight: 800;
    margin-bottom: 24px;
}

.footer-title span {
    color: #E55473;
}

.footer-container p {
    color: rgba(255, 255, 255, 0.90);
    font-size: 18px;
    font-weight: 400;
    width: 634px;
    margin-bottom: 24px;
}

.footer-container p a {
    color: #E55473;
    text-decoration: none;
}

.footer-container .copyright-notice {
    color: rgba(255, 255, 255, 0.40);
    font-size: 16px;
    font-weight: 400;
}

#my-name {
    color: #E55473;
    font-size: 14px;
    font-weight: 400;
}

